Add Certificate II & III, optimize PDF margins to 10-11mm, fix output format issues

--- a/The_Original_Version_of_the_app/templates/deviation_statement.html
+++ b/The_Original_Version_of_the_app/templates/deviation_statement.html
@@ -11,16 +11,16 @@
 }
 
 .container {
-    width: 275mm; /* Maximized for A4 landscape (297mm - 11mm left - 11mm right) */
-    min-height: 188mm;
-    margin: 10mm 11mm 10mm 11mm; /* Uniform 10-11mm margins */
+    width: 267mm; /* Expands to fit more of the page (297mm - 15mm left - 15mm right) */
+    min-height: 190mm;
+    margin: 20mm 15mm 10mm 15mm; /* Top: 20mm, Right: 15mm, Bottom: 10mm, Left: 15mm */
     padding: 0;
     box-sizing: border-box;
 }
 
 table {
     width: 100%;
-    max-width: 275mm;
+    max-width: 267mm; /* Matches new container width */
     border-collapse: collapse;
     table-layout: fixed;
 }
@@ -49,19 +49,19 @@ th, td {
         <table>
             <thead>
                 <tr>
-                    <th width="6.2mm">ITEM No.</th>
-                    <th width="98mm">Description</th>
-                    <th width="10.3mm">Unit</th>
-                    <th width="10.3mm">Qty as per Work Order</th>
-                    <th width="10.3mm">Rate</th>
-                    <th width="10.3mm">Amt as per Work Order Rs.</th>
-                    <th width="10.3mm">Qty Executed</th>
-                    <th width="10.3mm">Amt as per Executed Rs.</th>
-                    <th width="10.3mm">Excess Qty</th>
-                    <th width="10.3mm">Excess Amt Rs.</th>
-                    <th width="10.3mm">Saving Qty</th>
-                    <th width="10.3mm">Saving Amt Rs.</th>
-                    <th width="47.5mm">REMARKS/ REASON.</th>
+                    <th width="6mm">ITEM No.</th>
+                    <th width="95mm">Description</th>
+                    <th width="10mm">Unit</th>
+                    <th width="10mm">Qty as per Work Order</th>
+                    <th width="10mm">Rate</th>
+                    <th width="10mm">Amt as per Work Order Rs.</th>
+                    <th width="10mm">Qty Executed</th>
+                    <th width="10mm">Amt as per Executed Rs.</th>
+                    <th width="10mm">Excess Qty</th>
+                    <th width="10mm">Excess Amt Rs.</th>
+                    <th width="10mm">Saving Qty</th>
+                    <th width="10mm">Saving Amt Rs.</th>
+                    <th width="46mm">REMARKS/ REASON.</th>
                 </tr>
                 
                 </tr>
