Fix note_sheet template: use dict notation for totals access

--- a/templates/note_sheet.html
+++ b/templates/note_sheet.html
@@ -41,10 +41,10 @@
                 <tr><td>14</td><td>In case of delay weather, Provisional Extension Granted</td><td>Yes. Time Extension sanctioned is enclosed proposing 18 days delay on part of the contractor and remaining on Govt. The case is to be approved by this office.</td></tr>
                 <tr><td>15</td><td>Whether any notice issued</td><td></td></tr>
                 <tr><td>16</td><td>Amount of Work Order Rs.</td><td>{{ data.work_order_amount }}</td></tr>
-                <tr><td>17</td><td>Actual Expenditure up to this Bill Rs.</td><td>{{ data.totals.payable }}</td></tr>
-                <tr><td>18</td><td>Balance to be done Rs.</td><td>{{ (data.work_order_amount | int - data.totals.payable | int) if data.totals.payable | int < data.work_order_amount | int else "NIL" }}</td></tr>
-                <tr><td></td><td>Net Amount of This Bill Rs.</td><td>{{ data.totals.payable }}</td></tr>
-                <tr><td>19</td><td>Prorata Progress on the Work maintained by the Firm</td><td>Till date {{ "%.2f" % ((data.totals.payable|float / data.work_order_amount|float * 100) if data.work_order_amount and data.work_order_amount|float > 0 else 0) }}% Work is executed</td></tr>
+                <tr><td>17</td><td>Actual Expenditure up to this Bill Rs.</td><td>{{ data['totals']['payable'] if data.get('totals') else '' }}</td></tr>
+                <tr><td>18</td><td>Balance to be done Rs.</td><td>{{ (data.work_order_amount | int - data['totals']['payable'] | int) if data.get('totals') and data['totals']['payable'] | int < data.work_order_amount | int else "NIL" }}</td></tr>
+                <tr><td></td><td>Net Amount of This Bill Rs.</td><td>{{ data['totals']['payable'] if data.get('totals') else '' }}</td></tr>
+                <tr><td>19</td><td>Prorata Progress on the Work maintained by the Firm</td><td>Till date {{ "%.2f" % ((data['totals']['payable']|float / data.work_order_amount|float * 100) if data.get('totals') and data.work_order_amount and data.work_order_amount|float > 0 else 0) }}% Work is executed</td></tr>
                 <tr><td>20</td><td>Date on Which record Measurement taken by JEN AC</td><td></td></tr>
                 <tr><td>21</td><td>Date of Checking and % on the Checked By AEN</td><td></td></tr>
                 <tr><td>22</td><td>No. Of selection item checked by the EE</td><td></td></tr>
@@ -55,13 +55,13 @@
                 <tr><td></td><td>(C) Any Excess Item Executed?</td><td>No</td></tr>
                 <tr><td></td><td>(D) Any Inadvertent Delay in Bill Submission?</td><td>No</td></tr>
                 <tr><td></td><td>Deductions:-</td><td></td></tr>
-                <tr><td></td><td>S.D.II</td><td>{{ (data.totals.payable | int * 0.10) | round(0) }}</td></tr>
-                <tr><td></td><td>I.T.</td><td>{{ (data.totals.payable | int * 0.02) | round(0) }}</td></tr>
-                <tr><td></td><td>GST</td><td>{{ (data.totals.payable | int * 0.02) | round(0, "ceil") | int // 2 * 2 }}</td></tr>
-                <tr><td></td><td>L.C.</td><td>{{ (data.totals.payable | int * 0.01) | round(0) }}</td></tr>
+                <tr><td></td><td>S.D.II</td><td>{{ (data['totals']['payable'] | int * 0.10) | round(0) if data.get('totals') else '' }}</td></tr>
+                <tr><td></td><td>I.T.</td><td>{{ (data['totals']['payable'] | int * 0.02) | round(0) if data.get('totals') else '' }}</td></tr>
+                <tr><td></td><td>GST</td><td>{{ (data['totals']['payable'] | int * 0.02) | round(0, "ceil") | int // 2 * 2 if data.get('totals') else '' }}</td></tr>
+                <tr><td></td><td>L.C.</td><td>{{ (data['totals']['payable'] | int * 0.01) | round(0) if data.get('totals') else '' }}</td></tr>
                 <tr><td></td><td>Liquidated Damages (Recovery)</td><td></td></tr>
-                <tr><td></td><td>Cheque</td><td>{{ data.totals.payable | int - ((data.totals.payable | int * 0.10) | round(0) + (data.totals.payable | int * 0.02) | round(0) + (data.totals.payable | int * 0.02) | round(0, "ceil") | int // 2 * 2 + (data.totals.payable | int * 0.01) | round(0)) }}</td></tr>
-                <tr><td></td><td>Total</td><td>{{ data.totals.payable }}</td></tr>
+                <tr><td></td><td>Cheque</td><td>{{ data['totals']['payable'] | int - ((data['totals']['payable'] | int * 0.10) | round(0) + (data['totals']['payable'] | int * 0.02) | round(0) + (data['totals']['payable'] | int * 0.02) | round(0, "ceil") | int // 2 * 2 + (data['totals']['payable'] | int * 0.01) | round(0)) if data.get('totals') else '' }}</td></tr>
+                <tr><td></td><td>Total</td><td>{{ data['totals']['payable'] if data.get('totals') else '' }}</td></tr>
                 <tr><td colspan="3" class="note-cell">{{ data.notes | join('\n') if data.notes else 'Note not available' }}</td></tr>
             </tbody>
         </table>
